<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Web App</string>
    <string name="settings">Settings</string>
    <string name="Contact_us">Contact Us</string>
    <string name="about">About</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="confirmation">Confirmation</string>
    <string name="exit_msg">Do you really want to exit app?</string>
    <string name="no_internet">Internet not connected, connect to internet and try again.</string>
    <string name="home">Home</string>
    <string name="cache">Cache</string>
    <string name="javascript">JavaScript</string>
    <string name="zoom_control">Zoom</string>
    <string name="scrollbars">Scrollbar</string>
    <string name="no_phone_supported">Phone call does not supported. Please visit Contact Us page.</string>
    <string name="no_email_supported">There are no email clients installed.</string>
    <string name="share">Share</string>
    <string name="share_title">Share via</string>
    <string name="send_email_title">Send email</string>
    <string name="share_subject">Interesting for You!!!</string>
    <string name="default_color">DEFAULT</string>
    <string name="red">MATERIAL RED</string>
    <string name="blue">MATERIAL BLUE</string>
    <string name="cancel">Cancel</string>
    <string name="material_grey">MATERIAL GREY</string>

    <string-array name="nav_drawer_items">
        <item>Settings</item>
        <item>Call</item>
        <item>Email</item>
        <item>Share</item>
        <item>Contact Us</item>
        <item>Skins</item>
        <item>About</item>
        <item>Exit</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/menu_ic_action_settings</item>
        <item>@drawable/menu_ic_action_phone_start</item>
        <item>@drawable/menu_ic_action_mail</item>
        <item>@drawable/menu_ic_action_share</item>
        <item>@drawable/menu_ic_action_contact_us</item>
        <item>@drawable/menu_ic_theme</item>
        <item>@drawable/menu_ic_action_about</item>
        <item>@drawable/menu_ic_action_exit</item>
    </array>

</resources>